[tool.poetry]
name = "oklahoma-cooling-centers"
version = "0.1.0"
description = ""
authors = ["Alex Ayon <jayonloza@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "oklahoma_cooling_centers"}]

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.14.0"
pandas = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
